MD Settings: Add Protected Content toggle to Site Settings

Adds the toggle with the same text as the Old Options. The site
exceptions portion is not included in this CL.

BUG=687783
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2673783002
Cr-Commit-Position: refs/heads/master@{#448133}

Former-commit-id: 2e34f7eb3596b5ff981a4d1554bec36765e23f5d